@@ -93,7 +93,8 @@ const char *TI73_CONST[TI73_MAXTYPES + 1][4] =
 // Return the type corresponding to the value
 const char *ti73_byte2type(uint8_t data)
 {
-	g_assert(data < TI73_MAXTYPES);
+	if(data < TI73_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI73_MAXTYPES) ? TI73_CONST[data][0] : "";
 }
 
@@ -117,7 +118,8 @@ uint8_t ti73_type2byte(const char *s)
 // Return the file extension corresponding to the value
 const char *ti73_byte2fext(uint8_t data)
 {
-	g_assert(data < TI73_MAXTYPES);
+	if(data < TI73_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI73_MAXTYPES) ? TI73_CONST[data][1] : "73?";
 }
 
@@ -141,14 +143,16 @@ uint8_t ti73_fext2byte(const char *s)
 // Return the descriptive associated with the vartype
 const char *ti73_byte2desc(uint8_t data)
 {
-	g_assert(data < TI73_MAXTYPES);
+	if(data < TI73_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI73_MAXTYPES) ? TI73_CONST[data][2] : _("Unknown");
 }
 
 // Return the icon name associated with the vartype
 const char *ti73_byte2icon(uint8_t data)
 {
-	g_assert(data < TI73_MAXTYPES);
+	if(data < TI73_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI73_MAXTYPES) ? TI73_CONST[data][3] : "Unknown";
 }
 
