@@ -87,7 +87,8 @@ const char *TI83_CONST[TI83_MAXTYPES + 1][4] =
 // Return the type corresponding to the value
 const char *ti83_byte2type(uint8_t data)
 {
-	//g_assert(data < TI83_MAXTYPES);
+	if(data < TI83_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI83_MAXTYPES) ? TI83_CONST[data][0] : "";
 }
 
@@ -111,7 +112,8 @@ uint8_t ti83_type2byte(const char *s)
 // Return the file extension corresponding to the value
 const char *ti83_byte2fext(uint8_t data)
 {
-	g_assert(data < TI83_MAXTYPES);
+	if(data < TI83_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI83_MAXTYPES) ? TI83_CONST[data][1] : "83?";
 }
 
@@ -135,14 +137,16 @@ uint8_t ti83_fext2byte(const char *s)
 // Return the descriptive associated with the vartype
 const char *ti83_byte2desc(uint8_t data)
 {
-	g_assert(data < TI83_MAXTYPES);
+	if(data < TI83_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI83_MAXTYPES) ? TI83_CONST[data][2] : _("Unknown");
 }
 
 // Return the icon name associated with the vartype
 const char *ti83_byte2icon(uint8_t data)
 {
-	//g_assert(data < TI83_MAXTYPES);
+	if(data < TI83_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI83_MAXTYPES) ? TI83_CONST[data][3] : "Unknown";
 }
 
