@@ -87,7 +87,8 @@ const char *TI85_CONST[TI85_MAXTYPES + 1][4] =
 // Return the type corresponding to the value
 const char *ti85_byte2type(uint8_t data)
 {
-	g_assert(data < TI85_MAXTYPES);
+	if(data < TI85_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI85_MAXTYPES) ? TI85_CONST[data][0] : "";
 }
 
@@ -111,8 +112,9 @@ uint8_t ti85_type2byte(const char *s)
 // Return the file extension corresponding to the value
 const char *ti85_byte2fext(uint8_t data)
 {
-	g_assert(data < TI85_MAXTYPES);
-  return (data < TI85_MAXTYPES) ? TI85_CONST[data][1] : "85?";
+	if(data < TI85_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
+	return (data < TI85_MAXTYPES) ? TI85_CONST[data][1] : "85?";
 }
 
 // Return the value corresponding to the file extension
@@ -134,14 +136,16 @@ uint8_t ti85_fext2byte(const char *s)
 // Return the descriptive associated with the vartype
 const char *ti85_byte2desc(uint8_t data)
 {
-	g_assert(data < TI85_MAXTYPES);
+	if(data < TI85_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI85_MAXTYPES) ? TI85_CONST[data][2] : _("Unknown");
 }
 
 // Return the icon name associated with the vartype
 const char *ti85_byte2icon(uint8_t data)
 {
-	g_assert(data < TI85_MAXTYPES);
+	if(data < TI85_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < TI85_MAXTYPES) ? TI85_CONST[data][3] : "Unknown";
 }
 
