@@ -94,7 +94,8 @@ const char *V200_CONST[V200_MAXTYPES + 1][4] = {
 // Return the type corresponding to the value
 const char *v200_byte2type(uint8_t data)
 {
-	g_assert(data < V200_MAXTYPES);
+	if(data < V200_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < V200_MAXTYPES) ? V200_CONST[data][0] : "";
 }
 
@@ -118,7 +119,8 @@ uint8_t v200_type2byte(const char *s)
 // Return the file extension corresponding to the value
 const char *v200_byte2fext(uint8_t data)
 {
-	g_assert(data < V200_MAXTYPES);
+	if(data < V200_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < V200_MAXTYPES) ? V200_CONST[data][1] : "v2?";
 }
 
@@ -142,14 +144,16 @@ uint8_t v200_fext2byte(const char *s)
 // Return the descriptive associated with the vartype
 const char *v200_byte2desc(uint8_t data)
 {
-	g_assert(data < V200_MAXTYPES);
+	if(data < V200_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < V200_MAXTYPES) ? V200_CONST[data][2] : _("Unknown");
 }
 
 // Return the icon name associated with the vartype
 const char *v200_byte2icon(uint8_t data)
 {
-	g_assert(data < V200_MAXTYPES);
+	if(data < V200_MAXTYPES)
+		tifiles_warning(_("typesxx: unknown type (%02x).\n"), data);
 	return (data < V200_MAXTYPES) ? V200_CONST[data][3] : "Unknown";
 }
 
